--- a/index.html
+++ b/index.html
@@ -220,6 +220,14 @@ PhD students:</p>
 </li>
 </ul>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2505.20321"><b>BiomedSQL: Text-to-SQL for Scientific Reasoning on Biomedical Knowledge Bases.</b></a>  <br />    Mathew J. Koretsky, Maya Willey, Adi Asija, Owen Bianchi, Chelsea X. Alvarado, Tanay Nayak, Nicole Kuznetsov, Sungwon Kim, <a href="https://scholar.google.com/citations?user=ZjfgPLMAAAAJ&amp;hl=en"><font color="Black"> Mike A. Nalls</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://scholar.google.com/citations?user=Rr643xYAAAAJ&amp;hl=en"><font color="Black"> Faraz Faghri</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2505.20321</font>, 2025. <font size=-1><a href="https://huggingface.co/datasets/NIH-CARD/BiomedSQL">[data]</a> <a href="https://github.com/NIH-CARD/biomedsql">[code]</a></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2505.18148"><b>Lost in the Haystack: Smaller Needles are More Difficult for LLMs to Find.</b></a>  <br />    Owen Bianchi, Mathew J. Koretsky, Maya Willey, Chelsea X. Alvarado, Tanay Nayak, Adi Asija, Nicole Kuznetsov, <a href="https://scholar.google.com/citations?user=ZjfgPLMAAAAJ&amp;hl=en"><font color="Black"> Mike A. Nalls</font></a>, <a href="https://scholar.google.com/citations?user=Rr643xYAAAAJ&amp;hl=en"><font color="Black"> Faraz Faghri</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2505.18148</font>, 2025. <font size=-1><a href="https://github.com/NIH-CARD/LostInTheHaystack">[code]</a></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2504.19395"><b>ICL Ciphers: Quantifying "Learning&rsquo;&rsquo; in In-Context Learning via Substitution Ciphers.</b></a>  <br />    Zhouxiang Fang, <a href="https://aamixsh.github.io/"><font color="Black"> Aayush Mishra</font></a>, Muhan Gao, <a href="https://anqiliu-ai.github.io/"><font color="Black"> Anqi Liu</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2504.19395</font>, 2025. <font size=-1><a href="https://github.com/jhu-CLSP/icl-ciphers">[code]</a></font></p>
 </li>
 </ul>
@@ -569,7 +577,7 @@ PhD students:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-05-17 14:53:03 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-05-27 21:27:23 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
