--- a/index.html
+++ b/index.html
@@ -220,6 +220,10 @@ PhD students:</p>
 </li>
 </ul>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2505.22037"><b>Jailbreak Distillation: Renewable Safety Benchmarking.</b></a>  <br />    <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Ahmed Elgohary, Xiawei Wang, A S M Iftekhar, Ahmed Magooda, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and Kyle Jackson. <br />   <font color="Gray">arXiv preprint arXiv:2505.22037</font>, 2025. <font size=-1><a href="https://github.com/microsoft/jailbreak-distillation">[data]</a></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2505.20321"><b>BiomedSQL: Text-to-SQL for Scientific Reasoning on Biomedical Knowledge Bases.</b></a>  <br />    Mathew J. Koretsky, Maya Willey, Adi Asija, Owen Bianchi, Chelsea X. Alvarado, Tanay Nayak, Nicole Kuznetsov, Sungwon Kim, <a href="https://scholar.google.com/citations?user=ZjfgPLMAAAAJ&amp;hl=en"><font color="Black"> Mike A. Nalls</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://scholar.google.com/citations?user=Rr643xYAAAAJ&amp;hl=en"><font color="Black"> Faraz Faghri</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2505.20321</font>, 2025. <font size=-1><a href="https://huggingface.co/datasets/NIH-CARD/BiomedSQL">[data]</a> <a href="https://github.com/NIH-CARD/biomedsql">[code]</a></font></p>
 </li>
 </ul>
@@ -577,7 +581,7 @@ PhD students:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-05-27 21:27:23 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-05-29 10:03:43 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
