--- a/index.html
+++ b/index.html
@@ -220,6 +220,10 @@ PhD students:</p>
 </li>
 </ul>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2506.11930"><b>Feedback Friction: LLMs Struggle to Fully Incorporate External Feedback.</b></a>  <br />    <a href="https://jiangdongwei.com/"><font color="Black"> Dongwei Jiang</font></a>, Alvin Zhang, <a href="https://scholar.google.com/citations?user=clTRNPsAAAAJ&amp;hl=en"><font color="Black"> Andrew Wang</font></a>, <a href="https://www.cs.jhu.edu/~noa/"><font color="Black"> Nicholas Andrews</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2506.11930</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/Feedback-Friction">[code]</a></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2505.22037"><b>Jailbreak Distillation: Renewable Safety Benchmarking.</b></a>  <br />    <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Ahmed Elgohary, Xiawei Wang, A S M Iftekhar, Ahmed Magooda, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and Kyle Jackson. <br />   <font color="Gray">arXiv preprint arXiv:2505.22037</font>, 2025. <font size=-1><a href="https://github.com/microsoft/jailbreak-distillation">[data]</a></font></p>
 </li>
 </ul>
@@ -300,7 +304,19 @@ PhD students:</p>
 </li>
 </ul>
 <ul>
+<li><p><a href="https://openreview.net/forum?id=ERce2rgMQC"><b>Controllable Safety Alignment: Inference-Time Adaptation to Diverse Safety Requirements.</b></a>  <br />    <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Ahmed Elgohary, Ahmed Magooda, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="DarkRed">The Thirteenth International Conference on Learning Representations</font>, 2025. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://www.acpjournals.org/doi/abs/10.7326/ANNALS-25-00012"><b>Large Language Models for Screening Search Results in Systematic Reviews: Are We There Yet?</b></a>  <br />    S Swaroop Vedula and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Annals of Internal Medicine</font>, 2025. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2404.03862"><b>Verifiable by Design: Aligning Language Models to Quote from Pre-Training Data.</b></a>  <br />    <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://marcmarone.com/"><font color="Black"> Marc Marone</font></a>, <a href="https://tianjianl.github.io/"><font color="Black"> Tianjian Li</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed"></font>, 2025. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
+<li><p><b>Hope for the Best, Prepare for the Worst: Certified Mitigation of Worst-Case LLM Copyright Infringement.</b>  <br />    <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Jiacan Yu, <a href="https://marcmarone.com/"><font color="Black"> Marc Marone</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed"></font>, 2025. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -436,7 +452,15 @@ PhD students:</p>
 </li>
 </ul>
 <ul>
+<li><p><b>Cross-Task Generalization via Natural Language Crowdsourcing Instructions.</b>  <br />    <a href="https://swarooprm.github.io/"><font color="Black"> Swaroop Mishra</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Chitta Baral and <a href="https://homes.cs.washington.edu/~hannaneh/"><font color="Black"> Hannaneh Hajishirzi</font></a>. <br />   <font color="DarkRed">ACL</font>, 2022. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://www.cambridge.org/core_title/gb/542719"><b>Toward Automatic Discovery of Diverse Perspectives.</b></a>  <br />    <a href="https://www.seas.upenn.edu/~sihaoc/"><font color="Black"> Sihao Chen</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cis.upenn.edu/~danroth/"><font color="Black"> Dan Roth</font></a>. <br />   <font color="DarkRed">Creating a More Transparent Internet: The Perspective Web - Cambridge University Press</font>, 2022. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
+<li><p><b>Super-NaturalInstructions: Generalization via Declarative Instructions on 1600+ NLP Tasks.</b>  <br />    <a href="https://homes.cs.washington.edu/~yizhongw/"><font color="Black"> Yizhong Wang</font></a>, <a href="https://swarooprm.github.io/"><font color="Black"> Swaroop Mishra</font></a>, Pegah Alipoormolabashi, <a href="https://yeganehkordi.github.io/"><font color="Black"> Yeganeh Kordi</font></a>, Amirreza Mirzaei, A. Arunkumar, Arjun Ashok, Arut Selvan Dhanasekaran, Atharva Naik, David Stap, Eshaan Pathak, Giannis Karamanolakis, Haizhi Gary Lai, Ishan Purohit, Ishani Mondal, Jacob Anderson, Kirby Kuznia, Krima Doshi, Maitreya Patel, Kuntal Kumar Pal, M. Moradshahi, Mihir Parmar, Mirali Purohit, Neeraj Varshney, Phani Rohitha Kaza, Pulkit Verma, Ravsehaj Singh Puri, Rushang Karia, Shailaja Keyur Sampat, Savan Doshi, Siddharth Deepak Mishra, Sujan Reddy, Sumanta Patro, Tanay Dixit, Xudong Shen, Chitta Baral, <a href="https://homes.cs.washington.edu/~yejin/"><font color="Black"> Yejin Choi</font></a>, <a href="https://nasmith.github.io/"><font color="Black"> Noah A. Smith</font></a>, Hanna Hajishirzi and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed"></font>, 2022. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -489,6 +513,10 @@ PhD students:</p>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2005.00206"><b>TransOMCS: From Linguistic Graphs to Commonsense Knowledge.</b></a>  <br />    Hongming Zhang, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Yangqiu Song and <a href="https://www.cis.upenn.edu/~danroth/"><font color="Black"> Dan Roth</font></a>. <br />   <font color="DarkRed">International Joint Conferences on Artificial Intelligence (IJCAI)</font>, 2020. <font size=-1><a href="https://github.com/HKUST-KnowComp/TransOMCS">[code]</a></font></p>
+</li>
+</ul>
+<ul>
+<li><p><b>UnifiedQA: Crossing Format Boundaries With a Single QA System.</b>  <br />    <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, <a href="https://www.sewonmin.com/"><font color="Black"> Sewon Min</font></a>, <a href="https://allenai.org/team/tushark"><font color="Black"> Tushar Khot</font></a>, <a href="https://allenai.org/team/ashishs"><font color="Black"> Ashish Sabharwal</font></a>, Oyvind Tafjord, <a href="https://allenai.org/team/peterc"><font color="Black"> Peter Clark</font></a> and <a href="https://homes.cs.washington.edu/~hannaneh/"><font color="Black"> Hannaneh Hajishirzi</font></a>. <br />   <font color="DarkRed">FINDINGS</font>, 2020. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -581,7 +609,7 @@ PhD students:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-05-29 10:03:43 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-06-20 10:51:28 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
