--- a/index.html
+++ b/index.html
@@ -252,7 +252,11 @@ PhD students:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2503.09639"><b>Can A Society of Generative Agents Simulate Human Behavior and Inform Public Health Policy? A Case Study on Vaccine Hesitancy.</b></a>  <br />    <a href="https://nlp4policy.notion.site/Abe-Hou-21661aa32a7a4d19a45b5bf31c11a99e"><font color="Black"> Abe Bohan Hou</font></a>, Hongru Du, Yichen Wang, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Zixiao Wang, Paul Pu Liang, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Lauren Gardner and <a href="https://cloudygoose.github.io/"><font color="Black"> Tianxing He</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2503.09639</font>, 2025. <font size=-1><a href="https://github.com/abehou/VacSim">[code]</a></font></p>
+<li><p><a href=""><b>Hell or High Water: Can Language Model Agents Formulate Backup Plans?</b></a>  <br />    <a href="https://scholar.google.com/citations?user=clTRNPsAAAAJ&amp;hl=en"><font color="Black"> Andrew Wang</font></a>, Sophia Hager, Adi Asija, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~noa/"><font color="Black"> Nicholas Andrews</font></a>. <br />   <font color="DarkRed">Conference on Language Modeling (COLM)</font>, 2025. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2503.09639"><b>Can A Society of Generative Agents Simulate Human Behavior and Inform Public Health Policy? A Case Study on Vaccine Hesitancy.</b></a>  <br />    <a href="https://nlp4policy.notion.site/Abe-Hou-21661aa32a7a4d19a45b5bf31c11a99e"><font color="Black"> Abe Bohan Hou</font></a>, Hongru Du, Yichen Wang, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Zixiao Wang, Paul Pu Liang, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Lauren Gardner and <a href="https://cloudygoose.github.io/"><font color="Black"> Tianxing He</font></a>. <br />   <font color="DarkRed">Conference on Language Modeling (COLM)</font>, 2025. <font size=-1><a href="https://github.com/abehou/VacSim">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -260,7 +264,7 @@ PhD students:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2410.01044"><b>Rationalyst: Pre-training Process-Supervision for Improving Reasoning.</b></a>  <br />    <a href="https://jiangdongwei.com/"><font color="Black"> Dongwei Jiang</font></a>, Guoxuan Wang, <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, <a href="https://scholar.google.com/citations?user=clTRNPsAAAAJ&amp;hl=en"><font color="Black"> Andrew Wang</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Chuyu Liu, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL)</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/Rationalyst">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2410.01044"><b>Rationalyst: Mining Implicit Rationales for Process Supervision of Reasoning.</b></a>  <br />    <a href="https://jiangdongwei.com/"><font color="Black"> Dongwei Jiang</font></a>, Guoxuan Wang, <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, <a href="https://scholar.google.com/citations?user=clTRNPsAAAAJ&amp;hl=en"><font color="Black"> Andrew Wang</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Chuyu Liu, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL)</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/Rationalyst">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -305,10 +309,6 @@ PhD students:</p>
 </ul>
 <ul>
 <li><p><a href="https://www.acpjournals.org/doi/abs/10.7326/ANNALS-25-00012"><b>Large Language Models for Screening Search Results in Systematic Reviews: Are We There Yet?</b></a>  <br />    S Swaroop Vedula and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Annals of Internal Medicine</font>, 2025. <font size=-1></font></p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2404.03862"><b>Verifiable by Design: Aligning Language Models to Quote from Pre-Training Data.</b></a>  <br />    <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://marcmarone.com/"><font color="Black"> Marc Marone</font></a>, <a href="https://tianjianl.github.io/"><font color="Black"> Tianjian Li</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed"></font>, 2025. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -444,15 +444,7 @@ PhD students:</p>
 </li>
 </ul>
 <ul>
-<li><p><b>Cross-Task Generalization via Natural Language Crowdsourcing Instructions.</b>  <br />    <a href="https://swarooprm.github.io/"><font color="Black"> Swaroop Mishra</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Chitta Baral and <a href="https://homes.cs.washington.edu/~hannaneh/"><font color="Black"> Hannaneh Hajishirzi</font></a>. <br />   <font color="DarkRed">ACL</font>, 2022. <font size=-1></font></p>
-</li>
-</ul>
-<ul>
 <li><p><a href="https://www.cambridge.org/core_title/gb/542719"><b>Toward Automatic Discovery of Diverse Perspectives.</b></a>  <br />    <a href="https://www.seas.upenn.edu/~sihaoc/"><font color="Black"> Sihao Chen</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cis.upenn.edu/~danroth/"><font color="Black"> Dan Roth</font></a>. <br />   <font color="DarkRed">Creating a More Transparent Internet: The Perspective Web - Cambridge University Press</font>, 2022. <font size=-1></font></p>
-</li>
-</ul>
-<ul>
-<li><p><b>Super-NaturalInstructions: Generalization via Declarative Instructions on 1600+ NLP Tasks.</b>  <br />    <a href="https://homes.cs.washington.edu/~yizhongw/"><font color="Black"> Yizhong Wang</font></a>, <a href="https://swarooprm.github.io/"><font color="Black"> Swaroop Mishra</font></a>, Pegah Alipoormolabashi, <a href="https://yeganehkordi.github.io/"><font color="Black"> Yeganeh Kordi</font></a>, Amirreza Mirzaei, A. Arunkumar, Arjun Ashok, Arut Selvan Dhanasekaran, Atharva Naik, David Stap, Eshaan Pathak, Giannis Karamanolakis, Haizhi Gary Lai, Ishan Purohit, Ishani Mondal, Jacob Anderson, Kirby Kuznia, Krima Doshi, Maitreya Patel, Kuntal Kumar Pal, M. Moradshahi, Mihir Parmar, Mirali Purohit, Neeraj Varshney, Phani Rohitha Kaza, Pulkit Verma, Ravsehaj Singh Puri, Rushang Karia, Shailaja Keyur Sampat, Savan Doshi, Siddharth Deepak Mishra, Sujan Reddy, Sumanta Patro, Tanay Dixit, Xudong Shen, Chitta Baral, <a href="https://homes.cs.washington.edu/~yejin/"><font color="Black"> Yejin Choi</font></a>, <a href="https://nasmith.github.io/"><font color="Black"> Noah A. Smith</font></a>, Hanna Hajishirzi and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed"></font>, 2022. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -597,7 +589,7 @@ PhD students:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-25 21:56:03 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-07-08 08:52:55 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
