--- a/index.html
+++ b/index.html
@@ -216,6 +216,10 @@ PhD students:</p>
 </li>
 </ul>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2506.22724"><b>The Translation Barrier Hypothesis: Multilingual Generation with Large Language Models Suffers from Implicit Translation Failure.</b></a>  <br />    Niyati Bafna, <a href="https://tianjianl.github.io/"><font color="Black"> Tianjian Li</font></a>, <a href="https://kentonmurray.com/index.html"><font color="Black"> Kenton Murray</font></a>, David R. Mortensen, David Yarowsky, Hale Sirin and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2506.22724</font>, 2025. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2506.11930"><b>Feedback Friction: LLMs Struggle to Fully Incorporate External Feedback.</b></a>  <br />    <a href="https://jiangdongwei.com/"><font color="Black"> Dongwei Jiang</font></a>, Alvin Zhang, <a href="https://scholar.google.com/citations?user=clTRNPsAAAAJ&amp;hl=en"><font color="Black"> Andrew Wang</font></a>, <a href="https://www.cs.jhu.edu/~noa/"><font color="Black"> Nicholas Andrews</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2506.11930</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/Feedback-Friction">[code]</a></font></p>
 </li>
 </ul>
@@ -589,7 +593,7 @@ PhD students:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-08 08:52:55 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-07-09 18:42:52 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
