--- a/index.html
+++ b/index.html
@@ -129,9 +129,11 @@ Other affiliations:</p>
 </div></div>
 <p><h2 id="talks">Recent Talks</h2></p>
 <ul>
-<li><p>2025, University of Pennsylvania Computational Linguistics lunch (<a href="https://danielkhashabi.com//files/2025_clunch_talk/2025-penn-clunch.pdf">slides</a>)</p>
+<li><p>2025, Apple Workshop on Reasoning and Planning (<a href="https://danielkhashabi.com/files/2025_apple_workshop/2025-apple-workshop.pdf">slides</a>)</p>
 </li>
-<li><p>2024, University of Cambridge the Language Technology Lab seminar (<a href="https://danielkhashabi.com//files/2024_cambridge_talk/2024-cambridge2.pdf">slides</a>)</p>
+<li><p>2025, University of Pennsylvania Computational Linguistics lunch (<a href="https://danielkhashabi.com/files/2025_clunch_talk/2025-penn-clunch.pdf">slides</a>)</p>
+</li>
+<li><p>2024, University of Cambridge the Language Technology Lab seminar (<a href="https://danielkhashabi.com/files/2024_cambridge_talk/2024-cambridge2.pdf">slides</a>)</p>
 </li>
 <li><p>2024, Oracle Labs ML seminar (<a href="http://danielkhashabi.com/files/2024_oracle/2024-oracle.pdf">slides</a>)</p>
 </li>
@@ -589,7 +591,7 @@ PhD students:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-22 21:56:52 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-07-23 13:37:04 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
