--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ Other affiliations:</p>
 <ul>
 <li><p>CS 601.471/671, NLP: Self-supervised Models: <a href="https://self-supervised.cs.jhu.edu/sp2023/">Spring 2023</a>, <a href="https://self-supervised.cs.jhu.edu/sp2024/">Spring 2024</a>, <a href="https://self-supervised.cs.jhu.edu/sp2025/">Spring 2025</a></p>
 </li>
-<li><p>CS 601.771, Advances in Self-supervised Models: <a href="https://self-supervised.cs.jhu.edu/fa2022/">Fall 2022</a>, <a href="https://self-supervised.cs.jhu.edu/fa2024/">Fall 2024</a></p>
+<li><p>CS 601.771, Advances in Self-supervised Models: <a href="https://self-supervised.cs.jhu.edu/fa2022/">Fall 2022</a>, <a href="https://self-supervised.cs.jhu.edu/fa2024/">Fall 2024</a>, <a href="https://self-supervised.cs.jhu.edu/fa2025/">Fall 2025</a></p>
 </li>
 </ul>
 <p><h2 id="lab">Intelligence Amplification Lab (IALab)</h2>
@@ -591,7 +591,7 @@ PhD students:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-07-23 13:37:04 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-08-04 07:36:07 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
