--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@ Other affiliations:</p>
 <li><p>CS 601.771, Advances in Self-supervised Models: <a href="https://self-supervised.cs.jhu.edu/fa2022/">Fall 2022</a>, <a href="https://self-supervised.cs.jhu.edu/fa2024/">Fall 2024</a>, <a href="https://self-supervised.cs.jhu.edu/fa2025/">Fall 2025</a></p>
 </li>
 </ul>
-<p><h2 id="lab">Intelligence Amplification Lab (IALab)</h2>
-PhD students:</p>
+<p><h2 id="lab">Intelligence Amplification Lab (IALab)</h2></p>
+<p>PhD students:</p>
 <ul>
 <li><p><a href="https://scholar.google.com/citations?user=t3Hhnx8AAAAJ&amp;hl=en/">Adam Byerly</a></p>
 </li>
@@ -258,7 +258,11 @@ PhD students:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://www.cs.jhu.edu/~noa/papers/HoHW.pdf"><b>Hell or High Water: Can Language Model Agents Formulate Backup Plans?</b></a>  <br />    <a href="https://scholar.google.com/citations?user=clTRNPsAAAAJ&amp;hl=en"><font color="Black"> Andrew Wang</font></a>, Sophia Hager, Adi Asija, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~noa/"><font color="Black"> Nicholas Andrews</font></a>. <br />   <font color="DarkRed">Conference on Language Modeling (COLM)</font>, 2025. <font size=-1></font></p>
+<li><p><a href="https://arxiv.org/abs/?"><b>Evaluating the Evaluators: Are readability metrics good measures of readability?</b></a>  <br />    Isabel Cachola, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and Mark Dredze. <br />   <font color="Gray">arXiv preprint arXiv:?</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/eval-the-eval-readability">[code]</a></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2508.11027"><b>Hell or High Water: Can Language Model Agents Formulate Backup Plans?</b></a>  <br />    <a href="https://scholar.google.com/citations?user=clTRNPsAAAAJ&amp;hl=en"><font color="Black"> Andrew Wang</font></a>, Sophia Hager, Adi Asija, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~noa/"><font color="Black"> Nicholas Andrews</font></a>. <br />   <font color="DarkRed">Conference on Language Modeling (COLM)</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/hell-or-high-water">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -311,6 +315,10 @@ PhD students:</p>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2404.04298"><b>Self-(In)Correct: LLMs Struggle with Discriminating Self-Generated Responses.</b></a>  <br />    <a href="https://jiangdongwei.com/"><font color="Black"> Dongwei Jiang</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://orionweller.github.io/"><font color="Black"> Orion Weller</font></a>, <a href="https://nweir127.github.io/"><font color="Black"> Nathaniel Weir</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Artificial Intelligence (AAAI)</font>, 2025. <font size=-1><a href="http://danielkhashabi.com/files/2025_selfincorrect/2025_AAAI_Presentation.key">[slides]</a> <a href="https://youtu.be/z3-AMZ7bdCw">[talk]</a> <a href="https://docs.google.com/presentation/d/1Iku_cTG-B4LTycUSXKJ8UfF3L5zdROL0oRDmdl0VZD8/edit?usp=sharing">[poster]</a></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://journals.sagepub.com/doi/full/10.1177/1932202X251356323"><b>Artificial Intelligence as a Co-Tutor: Assessing the Impact in the Advanced Learning Virtual Classroom.</b></a>  <br />    Kathryn N Thompson, Kimberley L Chandler, <a href="https://candice-morgan.github.io/"><font color="Black"> Candice Morgan</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Emily A Delinski and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="DarkRed">Journal of Advanced Academics</font>, 2025. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -591,7 +599,7 @@ PhD students:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-08-04 07:36:07 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-08-18 06:52:15 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
